--- a/css/style.css
+++ b/css/style.css
@@ -110,16 +110,18 @@ body{
     min-height: 200px;
     background-color: #a49e7e;
     transform: translate(-100%);
+    opacity: 0;
     position: fixed;
     bottom:0px;
     padding:15px;
     padding-bottom: 65px;
     text-align: center;
-    transition: transform 1s;
+    transition: transform .4s ease, opacity .5s ease;
     user-select: none;
 }
 .toggle{
     transform: translate(0);
+    opacity: 1;
 }
 .button--index{
     position: fixed;
