--- a/css/style.css
+++ b/css/style.css
@@ -14,12 +14,19 @@ body{
 .document{
     max-width:1028px;
     padding: 60px;
+    padding-top: 40px;
     padding-bottom: 10px;
     background-color: white;
     position: relative;
-    margin: 20px auto;
+    margin: 0px auto;
 }
-
+.header{
+    max-width: 1028px;
+    background-color: white;
+    padding:60px;
+    padding-bottom: 0px;
+    margin:20px auto 0px;
+}
 .document__title{
     text-align: center;
     text-transform: uppercase;
@@ -32,7 +39,6 @@ body{
     text-align: center;
     padding-bottom: 20px;
     border-bottom: 1px solid black;
-    margin-bottom: 30px;
 }
 .item{
     margin-bottom: 45px;
@@ -170,6 +176,27 @@ body{
     font-weight: bold;
     text-align: center;
 }
+
+.indiceTop{
+    height: 50px;
+    background-color: rgb(135, 135, 135);
+    position: sticky;
+    bottom:0;
+    z-index: 999;
+    max-width: 1028px;
+    margin:0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+[contenteditable=true]:empty::before{
+    content: attr(placeholder);
+    color:grey;
+}
+
+
 @media screen and (max-width:768px) {
     .document{
         width: 100%;
